# BOJ

./: .clang-format  .gitignore  .gitmessage.ko.txt  MODULE.bazel  WORKSPACE.bazel
1000/src/: 1002-turret.cc  1002-turret.h  1002_turret.h  1003_fibonacci_function.h  1012_organic_cabbage.h  1032_cmd.h  1065-hansu.cc  1065-hansu.h  1065_hansu.h  1076_resistance.h  1100_white_cells.h  1149_rgb_street.h  1152_number_of_words.h  1157_word_study.h  1158_Josephus_problem.h  1173_exercise.h  1181_sort_words.h  1236_guard_castle.h  1238_party.h  1259_palindrome_numbers.h  1260_dfs_and_bfs.h  1264_number_of_vowel.h  1316_group_word_checker.h  1333_missed_call.h  1365_twisted_line.h  1427_sort_inside.h  1436_film_director_shom.h  1440_timemachine.h  1453_pc_room_part_time_job.h  1463_make_one.h  1475_room_number.h  1504_specific_shortest_path.h  1526_largest_gold_minsu.h  1541-lost_parenthesis.cc  1541-lost_parenthesis.h  1541_lost_parenthesis.h  1543_document_search.h  1620_im_pokemon_master.h  1629_multiplication.h  1681_line_up.h  (+17 more)
1000/tests/: 1002-turret-test.cc  1002_turret_test.cc  1003_fibonacci_function_test.cc  1012_organic_cabbage_test.cc  1032_cmd_test.cc  1065-hansu-test.cc  1065_hansu_test.cc  1076_resistance_test.cc  1100_white_cells_test.cc  1149_rgb_street_test.cc  1152_number_of_words_test.cc  1157_word_study_test.cc  1158_Josephus_problem_test.cc  1173_exercise_test.cc  1181_sort_words_test.cc  1236_guard_castle_test.cc  1238_party_test.cc  1259_palindrome_numbers_test.cc  1260_dfs_and_bfs_test.cc  1264_number_of_vowel_test.cc  1316_group_word_checker_test.cc  1333_missed_call_test.cc  1365_twisted_line_test.cc  1427_sort_inside_test.cc  1436_film_director_shom_test.cc  1440_timemachine_test.cc  1453_pc_room_part_time_job_test.cc  1463_make_one_test.cc  1475_room_number_test.cc  1504_specific_shortest_path_test.cc  1526_largest_gold_minsu_test.cc  1541-lost_parenthesis-test.cc  1541_lost_parenthesis_test.cc  1543_document_search_test.cc  1629_multiplication_test.cc  1681_line_up_test.cc  1735_fractional_sum_test.cc  1747_prime_and_palindrome_test.cc  1759_create_password_test.cc  1764_no_hear_and_no_see_test.cc  (+12 more)
10000/src/: 10026_red_green_blindness.h  10093_numbers.h  10101_remember_triangle.h  10102_openning_vote.h  10163_color_paper.h  10171_cat.h  10172_dog.h  10181_federation_favorites.h  10275_gold_rush.h  10480_oddities.h  10718_we_love_kriii.h  10757-big_number_a_plus_b.cc  10757-big_number_a_plus_b.h  10757_big_number_a_plus_b.h  10768_special_day.h  10773_zero.h  10797_10_days_rotation_system.h  10798_vertical_reading.h  10804_reverse_card_placement.h  10807_counting.h  10808_number_of_alphabet.h  10809_find_alphabet.h  10810_put_ball_in.h  10811_reverse_buckets.h  10813_change_ball.h  10814_age_stable_sort.h  10815_number_cards.h  10816_number_cards_2.h  10817_three_numbers.h  10820_string_analysis.h  10821_number_of_integer.h  10824_four_numbers.h  10826_fibonacci_number_4.h  10828_stack.h  10844_easy_stair_numbers.h  10845_queue.h  10867_sort_except_repeated_numbers.h  10926_surprise.h  10987_number_of_vowel.h  10988_check_palindrome.h  (+4 more)
10000/tests/: 10026_red_green_blindness_test.cc  10093_numbers_test.cc  10101_remember_triangle_test.cc  10102_openning_vote_test.cc  10163_color_paper_test.cc  10171_cat_test.cc  10172_dog_test.cc  10181_federation_favorites_test.cc  10275_gold_rush_test.cc  10480_oddities_test.cc  10718_we_love_kriii_test.cc  10757-big_number_a_plus_b-test.cc  10757_big_number_a_plus_b_test.cc  10768_special_day_test.cc  10773_zero_test.cc  10797_10_days_rotation_system_test.cc  10798_vertical_reading_test.cc  10804_reverse_card_placement_test.cc  10807_counting_test.cc  10808_number_of_alphabet_test.cc  10809_find_alphabet_test.cc  10810_put_ball_in_test.cc  10811_reverse_bucket_test.cc  10813_change_ball_test.cc  10814_age_stable_sort_test.cc  10815_number_cards_test.cc  10816_number_cards_2_test.cc  10817_three_numbers_test.cc  10820_string_analysis_test.cc  10821_number_of_integer_test.cc  10824_four_numbers_test.cc  10826_fibonacci_number_4_test.cc  10828_stack_test.cc  10844_easy_stair_numbers_test.cc  10845_queue_test.cc  10867_sort_except_repeated_numbers_test.cc  10926_surprise_test.cc  10987_number_of_vowel_test.cc  10988_check_palindrome_test.cc  10989_sorting_numbers_3_test.cc  (+3 more)
11000/src/: 11004_kth_number.h  11005_base_conversion_2.h  11034_three_kangaroo2.h  11047_coin_0.h  11051_binomial_coefficient_2.h  11053_longest_increasing_subsequence.h  11054_longest_bitonic_subsequence.h  11091_use_all_alphabets.h  11104_fridge_of_your_dreams.h  11113_the_traveling_orienteerer.h  11117_letter_cookies.h  11121_communication_channels.h  11131_balancing_weights.h  11149_decode_the_message.h  11161_negative_people_in_da_house.h  11170_number_of_zero.h  11176_in_the_shower.h  11195_peragrams.h  11365_secret.h  11399_atm.h  11549_identifying_tea.h  11568_scheme.h  11650_sorting_coordinates.h  11651_sorting_coordinates_2.h  11654_ascii_code.h  11655_rot13.h  11657_time_machine.h  11659_finding_sum_of_intervals_4.h  11660_finding_sum_of_intervals_5.h  11665_cubic_intersection.h  11718_print_as_it_is.h  11719_print_as_it_is_2.h  11721_print_disconnect_ten.h  11722_longest_decreasing_subsequence.h  11724_number_of_connected_components.h  11725_find_parent_of_tree.h  11726_2_by_n_tiling.h  11727_2_by_n_tiling_2.h  11800_tawla.h  11866_Josephus_problem_0.h  (+6 more)
11000/tests/: 11004_kth_number_test.cc  11005_base_conversion_2_test.cc  11034_three_kangaroo2_test.cc  11047_coin_0_test.cc  11051_binomial_coefficient_2_test.cc  11053_longest_increasing_subsequence_test.cc  11054_longest_bitonic_subsequence_test.cc  11091_use_all_alphabets_test.cc  11104_fridge_of_your_dreams_test.cc  11113_the_traveling_orienteerer_test.cc  11117_letter_cookies_test.cc  11121_communication_channels_test.cc  11131_balancing_weights_test.cc  11149_decode_the_message_test.cc  11161_negative_people_in_da_house_test.cc  11170_number_of_zero_test.cc  11176_in_the_shower_test.cc  11195_peragrams_test.cc  11365_secret_test.cc  11399_atm_test.cc  11549_identifying_tea_test.cc  (+25 more)
(+1169 files in other folders)
