load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "1002-turret",
    srcs = ["1002-turret.cc"],
    hdrs = ["1002-turret.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1065-hansu",
    srcs = ["1065-hansu.cc"],
    hdrs = ["1065-hansu.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1259_palindrome_numbers",
    hdrs = ["1259_palindrome_numbers.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1436_film_director_shom",
    hdrs = ["1436_film_director_shom.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1541-lost_parenthesis",
    srcs = ["1541-lost_parenthesis.cc"],
    hdrs = ["1541-lost_parenthesis.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1543_document_search",
    hdrs = ["1543_document_search.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1629_multiplication",
    hdrs = ["1629_multiplication.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1759_create_password",
    hdrs = ["1759_create_password.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1924-2007",
    srcs = ["1924-2007.cc"],
    hdrs = ["1924-2007.h"],
    visibility = ["//1000/tests:__pkg__"],
)