load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "1002_turret",
    hdrs = ["1002_turret.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1003_fibonacci_function",
    hdrs = ["1003_fibonacci_function.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1012_organic_cabbage",
    hdrs = ["1012_organic_cabbage.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1032_cmd",
    hdrs = ["1032_cmd.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1065_hansu",
    hdrs = ["1065_hansu.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1076_resistance",
    hdrs = ["1076_resistance.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1100_white_cells",
    hdrs = ["1100_white_cells.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library( 
    name = "1149_rgb_street",
    hdrs = ["1149_rgb_street.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1152_number_of_words",
    hdrs = ["1152_number_of_words.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1157_word_study",
    hdrs = ["1157_word_study.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1158_Josephus_problem",
    hdrs = ["1158_Josephus_problem.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1181_sort_words",
    hdrs = ["1181_sort_words.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1238_party",
    hdrs = ["1238_party.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1259_palindrome_numbers",
    hdrs = ["1259_palindrome_numbers.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1260_dfs_and_bfs",
    hdrs = ["1260_dfs_and_bfs.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1264_number_of_vowel",
    hdrs = ["1264_number_of_vowel.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1316_group_word_checker",
    hdrs = ["1316_group_word_checker.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1365_twisted_line",
    hdrs = ["1365_twisted_line.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1427_sort_inside",
    hdrs = ["1427_sort_inside.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1436_film_director_shom",
    hdrs = ["1436_film_director_shom.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1440_timemachine",
    hdrs = ["1440_timemachine.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1463_make_one",
    hdrs = ["1463_make_one.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1504_specific_shortest_path",
    hdrs = ["1504_specific_shortest_path.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1541_lost_parenthesis",
    hdrs = ["1541_lost_parenthesis.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1543_document_search",
    hdrs = ["1543_document_search.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1629_multiplication",
    hdrs = ["1629_multiplication.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1735_fractional_sum",
    hdrs = ["1735_fractional_sum.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1747_prime_and_palindrome",
    hdrs = ["1747_prime_and_palindrome.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1759_create_password",
    hdrs = ["1759_create_password.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1764_no_hear_and_no_see",
    hdrs = ["1764_no_hear_and_no_see.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1788_extended_fibonacci",
    hdrs = ["1788_extended_fibonacci.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1850_gcd",
    hdrs = ["1850_gcd.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1904_zero_one_tile",
    hdrs = ["1904_zero_one_tile.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1912_continuous_sum",
    hdrs = ["1912_continuous_sum.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1916_get_minimum_cost",
    hdrs = ["1916_get_minimum_cost.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1920_find_numbers",
    hdrs = ["1920_find_numbers.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1924_2007",
    hdrs = ["1924_2007.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1932_integer_triangle",
    hdrs = ["1932_integer_triangle.h"],
    visibility = ["//1000/tests:__pkg__"],
)

cc_library(
    name = "1987_alphabet",
    hdrs = ["1987_alphabet.h"],
    visibility = ["//1000/tests:__pkg__"],
)

