load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "1002_turret_test",
    srcs = ["1002_turret_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1002_turret",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1003_fibonacci_function_test",
    srcs = ["1003_fibonacci_function_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1003_fibonacci_function",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1012_organic_cabbage_test",
    srcs = ["1012_organic_cabbage_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1012_organic_cabbage",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1065_hansu_test",
    srcs = ["1065_hansu_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1065_hansu",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1149_rgb_street_test",
    srcs = ["1149_rgb_street_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1149_rgb_street",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1152_number_of_words_test",
    srcs = ["1152_number_of_words_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1152_number_of_words",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1158_Josephus_problem_test",
    srcs = ["1158_Josephus_problem_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1158_Josephus_problem",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1259_palindrome_numbers_test",
    srcs = ["1259_palindrome_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1259_palindrome_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1260_dfs_and_bfs_test",
    srcs = ["1260_dfs_and_bfs_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1260_dfs_and_bfs",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1436_film_director_shom_test",
    srcs = ["1436_film_director_shom_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1436_film_director_shom",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1440_timemachine_test",
    srcs = ["1440_timemachine_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1440_timemachine",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1463_make_one_test",
    srcs = ["1463_make_one_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1463_make_one",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1541_lost_parenthesis_test",
    srcs = ["1541_lost_parenthesis_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1541_lost_parenthesis",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1543_document_search_test",
    srcs = ["1543_document_search_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1543_document_search",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1629_multiplication_test",
    srcs = ["1629_multiplication_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1629_multiplication",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1735_fractional_sum_test",
    srcs = ["1735_fractional_sum_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1735_fractional_sum",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1747_prime_and_palindrome_test",
    srcs = ["1747_prime_and_palindrome_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1747_prime_and_palindrome",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1759_create_password_test",
    srcs = ["1759_create_password_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1759_create_password",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1764_no_hear_and_no_see_test",
    srcs = ["1764_no_hear_and_no_see_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1764_no_hear_and_no_see",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1850_gcd_test",
    srcs = ["1850_gcd_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1850_gcd",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1904_zero_one_tile_test",
    srcs = ["1904_zero_one_tile_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1904_zero_one_tile",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1912_continuous_sum_test",
    srcs = ["1912_continuous_sum_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1912_continuous_sum",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1916_get_minimum_cost_test",
    srcs = ["1916_get_minimum_cost_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1916_get_minimum_cost",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1920_find_numbers_test",
    srcs = ["1920_find_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1920_find_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1924_2007_test",
    srcs = ["1924_2007_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1924_2007",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1932_integer_triangle_test",
    srcs = ["1932_integer_triangle_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1932_integer_triangle",
        "@googletest//:gtest_main",
    ],
)