load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "1002_turret_test",
    srcs = ["1002_turret_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1002_turret",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1003_fibonacci_function_test",
    srcs = ["1003_fibonacci_function_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1003_fibonacci_function",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1012_organic_cabbage_test",
    srcs = ["1012_organic_cabbage_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1012_organic_cabbage",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1032_cmd_test",
    srcs = ["1032_cmd_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1032_cmd",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1065_hansu_test",
    srcs = ["1065_hansu_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1065_hansu",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1100_white_cells_test",
    srcs = ["1100_white_cells_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1100_white_cells",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1149_rgb_street_test",
    srcs = ["1149_rgb_street_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1149_rgb_street",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1152_number_of_words_test",
    srcs = ["1152_number_of_words_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1152_number_of_words",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1157_word_study_test",
    srcs = ["1157_word_study_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1157_word_study",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1158_Josephus_problem_test",
    srcs = ["1158_Josephus_problem_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1158_Josephus_problem",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1181_sort_words_test",
    srcs = ["1181_sort_words_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1181_sort_words",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1238_party_test",
    srcs = ["1238_party_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1238_party",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1259_palindrome_numbers_test",
    srcs = ["1259_palindrome_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1259_palindrome_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1260_dfs_and_bfs_test",
    srcs = ["1260_dfs_and_bfs_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1260_dfs_and_bfs",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1264_number_of_vowel_test",
    srcs = ["1264_number_of_vowel_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1264_number_of_vowel",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1316_group_word_checker_test",
    srcs = ["1316_group_word_checker_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1316_group_word_checker",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1365_twisted_line_test",
    srcs = ["1365_twisted_line_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1365_twisted_line",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1427_sort_inside_test",
    srcs = ["1427_sort_inside_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1427_sort_inside",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1436_film_director_shom_test",
    srcs = ["1436_film_director_shom_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1436_film_director_shom",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1440_timemachine_test",
    srcs = ["1440_timemachine_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1440_timemachine",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1463_make_one_test",
    srcs = ["1463_make_one_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1463_make_one",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1541_lost_parenthesis_test",
    srcs = ["1541_lost_parenthesis_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1541_lost_parenthesis",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1504_specific_shortest_path_test",
    srcs = ["1504_specific_shortest_path_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1504_specific_shortest_path",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1543_document_search_test",
    srcs = ["1543_document_search_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1543_document_search",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1629_multiplication_test",
    srcs = ["1629_multiplication_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1629_multiplication",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1735_fractional_sum_test",
    srcs = ["1735_fractional_sum_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1735_fractional_sum",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1747_prime_and_palindrome_test",
    srcs = ["1747_prime_and_palindrome_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1747_prime_and_palindrome",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1759_create_password_test",
    srcs = ["1759_create_password_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1759_create_password",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1764_no_hear_and_no_see_test",
    srcs = ["1764_no_hear_and_no_see_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1764_no_hear_and_no_see",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1788_extended_fibonacci_test",
    srcs = ["1788_extended_fibonacci_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1788_extended_fibonacci",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1850_gcd_test",
    srcs = ["1850_gcd_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1850_gcd",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1904_zero_one_tile_test",
    srcs = ["1904_zero_one_tile_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1904_zero_one_tile",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1912_continuous_sum_test",
    srcs = ["1912_continuous_sum_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1912_continuous_sum",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1916_get_minimum_cost_test",
    srcs = ["1916_get_minimum_cost_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1916_get_minimum_cost",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1920_find_numbers_test",
    srcs = ["1920_find_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1920_find_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1924_2007_test",
    srcs = ["1924_2007_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1924_2007",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1932_integer_triangle_test",
    srcs = ["1932_integer_triangle_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1932_integer_triangle",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "1987_alphabet_test",
    srcs = ["1987_alphabet_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//1000/src:1987_alphabet",
        "@googletest//:gtest_main",
    ],
)
