load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "10171_cat",
    hdrs = ["10171_cat.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10172_dog",
    hdrs = ["10172_dog.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10757-big_number_a_plus_b",
    srcs = ["10757-big_number_a_plus_b.cc"],
    hdrs = ["10757-big_number_a_plus_b.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10773_zero",
    hdrs = ["10773_zero.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10798_vertical_reading",
    hdrs = ["10798_vertical_reading.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10807_counting",
    hdrs = ["10807_counting.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10810_put_ball_in",
    hdrs = ["10810_put_ball_in.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10811_reverse_buckets",
    hdrs = ["10811_reverse_buckets.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10813_change_ball",
    hdrs = ["10813_change_ball.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10988_check_palindrome",
    hdrs = ["10988_check_palindrome.h"],
    visibility = ["//10000/tests:__pkg__"],
)
