load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "10101_remember_triangle",
    hdrs = ["10101_remember_triangle.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10171_cat",
    hdrs = ["10171_cat.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10172_dog",
    hdrs = ["10172_dog.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10480_oddities",
    hdrs = ["10480_oddities.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10718_we_love_kriii",
    hdrs = ["10718_we_love_kriii.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10757_big_number_a_plus_b",
    hdrs = ["10757_big_number_a_plus_b.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10773_zero",
    hdrs = ["10773_zero.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10798_vertical_reading",
    hdrs = ["10798_vertical_reading.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10807_counting",
    hdrs = ["10807_counting.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10810_put_ball_in",
    hdrs = ["10810_put_ball_in.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10811_reverse_buckets",
    hdrs = ["10811_reverse_buckets.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10813_change_ball",
    hdrs = ["10813_change_ball.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10815_number_cards",
    hdrs = ["10815_number_cards.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10816_number_cards_2",
    hdrs = ["10816_number_cards_2.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10824_four_numbers",
    hdrs = ["10824_four_numbers.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10826_fibonacci_number_4",
    hdrs = ["10826_fibonacci_number_4.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10828_stack",
    hdrs = ["10828_stack.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10844_easy_stair_numbers",
    hdrs = ["10844_easy_stair_numbers.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10845_queue",
    hdrs = ["10845_queue.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10926_surprise",
    hdrs = ["10926_surprise.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10987_number_of_vowel",
    hdrs = ["10987_number_of_vowel.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10988_check_palindrome",
    hdrs = ["10988_check_palindrome.h"],
    visibility = ["//10000/tests:__pkg__"],
)
